tests/snapshots/snapshots__customers_create.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Create a new customer (POST /v2/customers)

Usage: flute2 customers create [OPTIONS] --first-name <FIRST_NAME> --last-name <LAST_NAME>

Options:
      --first-name <FIRST_NAME>
          Customer first name (required)
      --last-name <LAST_NAME>
          Customer last name (required)
      --company <COMPANY>
          Customer company name
      --email <EMAIL>
          Customer email address
      --mobile <MOBILE_PHONE_NUMBER>
          Customer mobile phone number in E.164 form, e.g. `+14155552309`
      --sms-consent
          Record consent to receive SMS
      --use-billing-as-shipping
          Reuse the billing address as the shipping address
      --billing-line1 <LINE1>
          AVS billing street line 1
      --billing-line2 <LINE2>
          AVS billing street line 2
      --billing-city <CITY>
          AVS billing city
      --billing-state <STATE>
          AVS billing state code (e.g. `CO`)
      --billing-postal-code <POSTAL_CODE>
          AVS billing postal / ZIP code
      --billing-country <COUNTRY>
          AVS billing country code (e.g. `US`)
      --shipping-line1 <LINE1>
          Shipping street line 1
      --shipping-line2 <LINE2>
          Shipping street line 2
      --shipping-city <CITY>
          Shipping city
      --shipping-state <STATE>
          Shipping state code (e.g. `CO`)
      --shipping-postal-code <POSTAL_CODE>
          Shipping postal / ZIP code
      --shipping-country <COUNTRY>
          Shipping country code (e.g. `US`)
  -h, --help
          Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
