tests/snapshots/snapshots__customers_delete.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Delete a customer (DELETE /v2/customers/{customerId}).

Requires `--yes` to prevent accidental deletions.

Usage: flute2 customers delete [OPTIONS] <CUSTOMER_ID>

Arguments:
  <CUSTOMER_ID>
          Customer UUID to delete (positional)

Options:
      --yes
          Confirm the deletion (required)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
