tests/snapshots/snapshots__customers_list.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
List customers (GET /v2/customers)

Usage: flute2 customers list [OPTIONS]

Options:
      --page-index <PAGE_INDEX>       Page number to fetch. Zero-based
      --page-size <PAGE_SIZE>         Maximum results per page (1-100). Omit it to use the server's default
      --all                           Fetch every page until the collection is exhausted
      --sort-by <SORT_BY>             Sort results by this field name
      --desc                          Sort descending. Without it, results come back newest first
      --full-name <FULL_NAME>         Filter by full name
      --email <EMAIL>                 Filter by email address
      --company-name <COMPANY_NAME>   Filter by company name
      --mobile <MOBILE_PHONE_NUMBER>  Filter by mobile number
      --created-from <CREATED_FROM>   Filter results created from this date-time inclusive (ISO 8601)
      --created-to <CREATED_TO>       Filter results created up to this date-time inclusive (ISO 8601)
  -h, --help                          Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
