tests/snapshots/snapshots__customers_update.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Update a customer (PATCH /v2/customers/{customerId}).

Omitted flags retain their existing server values.

Usage: flute2 customers update [OPTIONS] <CUSTOMER_ID>

Arguments:
  <CUSTOMER_ID>
          Customer UUID to update (positional)

Options:
      --first-name <FIRST_NAME>
          New first name

      --last-name <LAST_NAME>
          New last name

      --company <COMPANY>
          New company name

      --email <EMAIL>
          New email address

      --mobile <MOBILE_PHONE_NUMBER>
          New mobile phone number in E.164 form, e.g. `+14155552309`

      --sms-consent [<SMS_CONSENT>]
          Consent to receive SMS: `--sms-consent` or `--sms-consent false`
          
          [possible values: true, false]

      --use-billing-as-shipping [<USE_BILLING_AS_SHIPPING>]
          Reuse the billing address as the shipping address: `--use-billing-as-shipping` or `--use-billing-as-shipping false`
          
          [possible values: true, false]

      --billing-line1 <LINE1>
          AVS billing street line 1

      --billing-line2 <LINE2>
          AVS billing street line 2

      --billing-city <CITY>
          AVS billing city

      --billing-state <STATE>
          AVS billing state code (e.g. `CO`)

      --billing-postal-code <POSTAL_CODE>
          AVS billing postal / ZIP code

      --billing-country <COUNTRY>
          AVS billing country code (e.g. `US`)

      --shipping-line1 <LINE1>
          Shipping street line 1

      --shipping-line2 <LINE2>
          Shipping street line 2

      --shipping-city <CITY>
          Shipping city

      --shipping-state <STATE>
          Shipping state code (e.g. `CO`)

      --shipping-postal-code <POSTAL_CODE>
          Shipping postal / ZIP code

      --shipping-country <COUNTRY>
          Shipping country code (e.g. `US`)

      --clear <FIELD>
          Clear a field back to nothing. Repeat the flag for several fields.
          
          An empty value does the same: `--email ""` and `--clear email` are one request. `first-name` and `last-name` cannot be cleared and are not offered.
          
          [possible values: company, email, mobile]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
