tests/snapshots/snapshots__detail_batch_closure.snap
---
source: tests/snapshots.rs
expression: "render::detail_table(r.resource, &object_for(r))"
---
batchStatus: PendingSettlement
