tests/snapshots/snapshots__detail_customer_created.snap
---
source: tests/snapshots.rs
expression: "render::detail_table(r.resource, &object_for(r))"
---
customerId: 8db2ff47-b143-4adb-ab58-a11111111111
